# UTBotJava

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: gradle-publish.yml
utbot-python/: build.gradle.kts
utbot-python-executor/: build.gradle
utbot-python-executor/src/main/kotlin/org/utbot/python/evaluation/: UtbotExecutorLoader.kt
utbot-python-executor/utbot_executor/: pyproject.toml
utbot-python-executor/utbot_executor/utbot_executor/: __main__.py  executor.py  listener.py  memory_compressor.py
utbot-python-executor/utbot_executor/utbot_executor/deep_serialization/: deep_serialization.py  example.py  json_converter.py  memory_objects.py
utbot-python-modules/utbot-executor/: README.md
utbot-python-modules/utbot-executor/utbot_executor/: __main__.py
utbot-python-modules/utbot-executor/utbot_executor/deep_serialization/: json_converter.py  numpy_serialization.py  test_json.json  utils.py
utbot-python/samples/: .coverage
utbot-python/samples/samples/: matrix.py
utbot-python/src/main/kotlin/org/utbot/python/: PythonEngine.kt  PythonTestCaseGenerator.kt  PythonTestGenerationProcessor.kt  UTPythonAPI.kt
utbot-python/src/main/kotlin/org/utbot/python/evaluation/: PythonWorkerManager.kt
utbot-python/src/main/resources/utbot-python-modules/utbot-executor/: pyproject.toml
utbot-python/src/main/resources/utbot-python-modules/utbot-executor/utbot_executor/: executor.py  listener.py  parser.py
utbot-python/src/test/resources/example_code/inner_dir/: inner_module.py
(+39 files in other folders)
